--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
+    "input": "^1.0.1",
+    "node-schedule": "^2.1.1",
     "punycode": "^2.3.0",
     "puppeteer": "^19.8.0",
     "puppeteer-extra": "^3.3.6",
