--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
+    "chalk": "^5.2.0",
     "dotenv": "^16.0.3",
     "input": "^1.0.1",
     "node-schedule": "^2.1.1",
@@ -18,5 +19,6 @@
     "puppeteer": "^19.8.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
-  }
+  },
+  "type": "module"
 }
