добавил эффекты для консоли

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "chalk": "^5.2.0",
     "dotenv": "^16.0.3",
     "input": "^1.0.1",
+    "log-update": "^5.0.1",
     "node-schedule": "^2.1.1",
+    "ora": "^6.3.0",
     "punycode": "^2.3.0",
     "puppeteer": "^19.8.0",
     "puppeteer-extra": "^3.3.6",
